--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+albumentations==1.4.3
 lightning==2.2.1
 matplotlib==3.7.5
 opencv-python==4.9.0.80
 progressbar2==4.4.2
+scikit-learn==1.3.2
 tifffile==2023.7.10
 torch==2.2.2
+torchvision==0.17.2
