--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-lightning==2.2.3
+lightning==2.2.4
 matplotlib==3.7.5
 opencv-python==4.9.0.80
 progressbar2==4.4.2
@@ -8,3 +8,4 @@ torch==2.3.0
 torchvision==0.18.0
 numpy==1.24.4
 torchmetrics==1.3.2
+tensorboard==2.14.0
